# Portfolio-site

./: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
projects/ai-customer-support/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
projects/ai-customer-support/alembic/: env.py
projects/ai-customer-support/alembic/versions/: 001_initial.py
projects/ai-customer-support/app/: main.py
projects/ai-customer-support/app/api/: auth.py  conversations.py  deps.py  documents.py  health.py
projects/ai-customer-support/app/core/: config.py  database.py  logging.py  redis.py  security.py
projects/ai-customer-support/app/models/: __init__.py  base.py  conversation.py  document.py  tenant.py  user.py
projects/ai-customer-support/app/services/: chunker.py  conversation_engine.py  embedding.py  ingestion.py  llm.py  retriever.py
projects/ai-customer-support/app/workers/: ingestion_worker.py
projects/ai-customer-support/tests/: conftest.py  test_chunker.py  test_conversation.py  test_retriever.py
projects/churn-prediction/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
projects/churn-prediction/data/: generate_dataset.py
projects/churn-prediction/docs/: architecture.md
projects/churn-prediction/notebooks/: 01_exploratory_analysis.ipynb
projects/churn-prediction/src/: __init__.py
projects/churn-prediction/src/api/: batch_score.py  main.py  schemas.py
projects/churn-prediction/src/causal/: __init__.py  uplift_modeling.py
projects/churn-prediction/src/evaluation/: __init__.py  calibration.py  lift_curve.py  metrics.py  retention_simulation.py
projects/churn-prediction/src/explainability/: shap_explainer.py
projects/churn-prediction/src/features/: builder.py
projects/churn-prediction/src/models/: __init__.py  baseline.py  gradient_boost.py  gradient_boosting.py  survival.py  uplift.py
projects/churn-prediction/tests/: test_api.py  test_models.py  test_preprocessing.py
projects/fraud-detection/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
projects/fraud-detection/docker/: Dockerfile  docker-compose.yml
projects/fraud-detection/docs/: portfolio_summary.md
projects/fraud-detection/src/: __init__.py
projects/fraud-detection/tests/: test_api.py  test_data_processing.py  test_evaluation.py  test_feature_engineering.py  test_models.py  test_monitoring.py
(+181 files in other folders)
